# companies.openapi.yml
@@ -416,6 +416,8 @@ components:
           format: int64
         name:
           type: string
+        type:
+          $ref: '#/components/schemas/CompanyType'
         vatNumber:
           type: string
           format: vat
@@ -434,6 +436,7 @@ components:
       required:
       - id
       - name
+      - type
       - vatNumber
       - verified
       - lastVerifiedAt
@@ -444,6 +447,8 @@ components:
           format: int64
         name:
           type: string
+        type:
+          $ref: '#/components/schemas/CompanyType'
         vatNumber:
           type: string
           format: vat
@@ -475,6 +480,7 @@ components:
       enum:
       - id
       - name
+      - type
       - vatNumber
       - externalId
       - verified
@@ -484,11 +490,14 @@ components:
       title: CompanyCreate
       required:
       - name
+      - type
       - vatNumber
       - verified
       properties:
         name:
           type: string
+        type:
+          $ref: '#/components/schemas/CompanyType'
         vatNumber:
           type: string
           format: vat
@@ -503,10 +512,13 @@ components:
       title: CompanyUpdate
       required:
       - name
+      - type
       - verified
       properties:
         name:
           type: string
+        type:
+          $ref: '#/components/schemas/CompanyType'
         url:
           type: string
           format: url
@@ -600,6 +612,11 @@ components:
       properties:
         active:
           type: boolean
+    CompanyType:
+      type: string
+      enum:
+      - supplier
+      - customer
     SampleOrderDirection:
       type: string
       enum:
