# sample-backend/src/main/java/org/wintersleep/openapi/crud/sample/domain/CompanyType.java
@@ -1,0 +1,6 @@
+package org.wintersleep.openapi.crud.sample.domain;
+
+public enum CompanyType {
+    SUPPLIER,
+    CUSTOMER,
+}
